Add Import parameter creators
I tried to make this one method which returns CustomActionParameter<VidarrAction>
but if type erasure will let me do that I cannot figure it out