@@ -14,7 +14,6 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 final class MetadataParameterConverter implements OutputType.Visitor<Imyhat> {
@@ -30,7 +29,7 @@ final class MetadataParameterConverter implements OutputType.Visitor<Imyhat> {
     }
   }
 
-  static Optional<CustomActionParameter<SubmitAction>> create(
+  static Optional<CustomActionParameter<SubmitAction>> createSubmitParam(
       Map<String, OutputType> parameters, TargetDeclaration target) {
     final List<ParameterGroup> handlers =
         parameters.entrySet().stream()
@@ -40,7 +39,7 @@ final class MetadataParameterConverter implements OutputType.Visitor<Imyhat> {
                         entry.getKey(),
                         entry.getValue().apply(new MetadataParameterConverter(target))))
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
     if (handlers.stream().anyMatch(h -> h.type.isBad())) {
       return Optional.empty();
@@ -67,6 +66,61 @@ final class MetadataParameterConverter implements OutputType.Visitor<Imyhat> {
             final AlgebraicValue tuple = (AlgebraicValue) value;
             final ObjectNode object = VidarrPlugin.MAPPER.createObjectNode();
             action.request.setMetadata(object);
+            switch (tuple.name()) {
+              case "INDIVIDUAL":
+                for (int index = 0; index < handlers.size(); index++) {
+                  handlers.get(index).store(object, tuple.get(index));
+                }
+                break;
+              case "GLOBAL":
+                for (final ParameterGroup handler : handlers) {
+                  handler.store(object, tuple.get(0));
+                }
+                break;
+            }
+          }
+        });
+  }
+
+  // Don't know that all of this is necessary. also refactor me into sharing code with my brother
+  // Tried to make one generic method that just returned CustomActionParameter<VidarrAction> but it
+  // blew up
+  static Optional<CustomActionParameter<ImportAction>> createImportParam(
+      Map<String, OutputType> parameters, TargetDeclaration target) {
+    final List<ParameterGroup> handlers =
+        parameters.entrySet().stream()
+            .map(
+                entry ->
+                    new ParameterGroup(
+                        entry.getKey(),
+                        entry.getValue().apply(new MetadataParameterConverter(target))))
+            .sorted()
+            .toList();
+
+    if (handlers.stream().anyMatch(h -> h.type.isBad())) {
+      return Optional.empty();
+    }
+
+    Imyhat type =
+        Imyhat.algebraicObject("INDIVIDUAL", handlers.stream().map(ParameterGroup::objectField));
+
+    boolean canHaveGlobal = true;
+    for (int index = 1; index < handlers.size(); index++) {
+      if (!handlers.get(index - 1).type.isSame(handlers.get(index).type)) {
+        canHaveGlobal = false;
+        break;
+      }
+    }
+    if (canHaveGlobal && !handlers.isEmpty()) {
+      type = type.unify(Imyhat.algebraicTuple("GLOBAL", handlers.get(0).type));
+    }
+
+    return Optional.of(
+        new CustomActionParameter<>("metadata", true, type) {
+          @Override
+          public void store(ImportAction action, Object value) {
+            final AlgebraicValue tuple = (AlgebraicValue) value;
+            final ObjectNode object = VidarrPlugin.MAPPER.createObjectNode();
             switch (tuple.name()) {
               case "INDIVIDUAL":
                 for (int index = 0; index < handlers.size(); index++) {
